--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -44,10 +47,186 @@
       <p class="header__element_theme-dark" aria-hidden="true">REC</p>
       <h1 class="header__title">no focus</h1>
       <p class="header__text title-decor">
-        Что делать, когда не можешь делать ничего <br> Или почему нам так сложно
-        сконцентрироваться, особенно когда очень надо
+        Что делать, когда не можешь делать ничего <br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
     </header>
+    <main>
+      <section class="blog-focus main__grid">
+        <h2 class="blog-focus__title main__title">
+          Почему сосредоточиться так сложно
+        </h2>
+        <ul class="blog-focus__list">
+          <li class="blog-focus__item">
+            <h3 class="blog-focus__subtitle title-decor">Многозадачность</h3>
+            <p class="blog-focus__text main__text">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
+              <a
+                class="main__link"
+                href="https://dana.org/article/multicosts-of-multitasking/"
+                target="_blank"
+                >выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
+            </p>
+          </li>
+          <li class="blog-focus__item">
+            <h3 class="blog-focus__subtitle title-decor">Дофамин</h3>
+            <p class="blog-focus__text main__text">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="blog-concentration">
+        <h2 class="blog-concentration__title main__title main__title_width">
+          Что снижает концентрацию внимания?
+        </h2>
+        <ul class="blog-concentration__list">
+          <li class="blog-concentration__item">
+            <h3 class="blog-concentration__subtitle title-decor">
+              Многозадачность
+            </h3>
+            <p class="blog-concentration__text main__text">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </li>
+          <li class="blog-concentration__item">
+            <h3 class="blog-concentration__subtitle title-decor">Еда</h3>
+            <p class="blog-concentration__text main__text">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </li>
+          <li class="blog-concentration__item">
+            <h3 class="blog-concentration__subtitle title-decor">Гаджеты</h3>
+            <p class="blog-concentration__text main__text">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="blog-goldfish main__grid">
+        <h2 class="blog-goldfish__title main__title main__title_width">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <div class="blog-goldfish__content">
+          <p class="blog-goldfish__content-text main__title title-decor">5 простых (на самом деле не очень) советов</p>
+          <ul class="blog-goldfish__list">
+            <li class="blog-goldfish__item">
+              <h3 class="blog-goldfish__subtitle title-decor">
+                Представьте небо и облака
+              </h3>
+              <p class="blog-goldfish__text main__text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+                успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+                как раз и мешают эти сложные задачи делать. В такие моменты можно
+                закрыть глаза и представить, что чистое небо — это вы, а облака —
+                тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+                где-то там, за тучами, и никуда не денется. Это упражнение поможет
+                вернуться в настоящий момент, а не волноваться о потенциальных
+                проблемах из будущего.
+              </p>
+            </li>
+            <li class="blog-goldfish__item">
+              <h3 class="blog-goldfish__subtitle title-decor">Включите музыку</h3>
+              <p class="blog-goldfish__text main__text">
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист в «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="blog-goldfish__item">
+              <h3 class="blog-goldfish__subtitle title-decor">Прогуляйтесь</h3>
+              <p class="blog-goldfish__text main__text">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a
+                  class="main__link"
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank"
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается. Можно
+                совместить прогулку с физическими упражнениями или бегом — так в
+                мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+                простая двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
+            </li>
+            <li class="blog-goldfish__item">
+              <h3 class="blog-goldfish__subtitle title-decor">Хорошо ешьте</h3>
+              <p class="blog-goldfish__text main__text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+              </p>
+            </li>
+            <li class="blog-goldfish__item">
+              <h3 class="blog-goldfish__subtitle title-decor">Читайте</h3>
+              <p class="blog-goldfish__text main__text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="gallery">
+        <h3 class="gallery__title main__title title-decor">А можно в картинках?</h3>
+        <div class="gallery__container">
+          <div class="gallery__block-1">
+            <img class="gallery__image" src="./images/sunset.png" alt="Изображение пейзажа" loading="lazy">
+          </div>
+          <div class="gallery__block-2">
+            <img class="gallery__image" src="./images/ice-cream.png" alt="Изображение с вкусным мороженым" loading="lazy">
+          </div>
+          <div class="gallery__block-3"> 
+            <img class="gallery__image" src="./images/tape.png" alt="Изображение с диском" loading="lazy">
+          </div> 
+          <div class="gallery__block-4">
+            <img class="gallery__image" src="./images/books.png" alt="Изображение с книгами" loading="lazy">
+          </div>
+          <div class="gallery__block-5">
+            <img class="gallery__image" src="./images/street.png" alt="Изображение улицы" loading="lazy">
+          </div>  
+        </div>
+      </section>
+    </main>
+    <footer class="footer decorated-zone">
+      <h2 class="footer__title">focus</h2>
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
