fix error actions

--- a/index.html
+++ b/index.html
@@ -140,25 +140,29 @@
           секунд)
         </h2>
         <div class="blog-goldfish__content">
-          <p class="blog-goldfish__content-text main__title title-decor">5 простых (на самом деле не очень) советов</p>
+          <p class="blog-goldfish__content-text main__title title-decor">
+            5 простых (на самом деле не очень) советов
+          </p>
           <ul class="blog-goldfish__list">
             <li class="blog-goldfish__item">
               <h3 class="blog-goldfish__subtitle title-decor">
                 Представьте небо и облака
               </h3>
               <p class="blog-goldfish__text main__text">
-                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-                успокоиться. Ведь часто именно тревожные мысли о сложных задачах
-                как раз и мешают эти сложные задачи делать. В такие моменты можно
-                закрыть глаза и представить, что чистое небо — это вы, а облака —
-                тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
-                где-то там, за тучами, и никуда не денется. Это упражнение поможет
-                вернуться в настоящий момент, а не волноваться о потенциальных
-                проблемах из будущего.
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
               </p>
             </li>
             <li class="blog-goldfish__item">
-              <h3 class="blog-goldfish__subtitle title-decor">Включите музыку</h3>
+              <h3 class="blog-goldfish__subtitle title-decor">
+                Включите музыку
+              </h3>
               <p class="blog-goldfish__text main__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -176,10 +180,11 @@
                   target="_blank"
                   >показал</a
                 >, что созерцание природы повышает концентрацию, в то время как
-                после просмотра городских пейзажей она наоборот понижается. Можно
-                совместить прогулку с физическими упражнениями или бегом — так в
-                мозг поступит ещё больше кислорода и он будет лучше работать. Но и
-                простая двадцатиминутная прогулка — тоже отличный вариант.
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
               </p>
             </li>
             <li class="blog-goldfish__item">
@@ -188,7 +193,8 @@
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
                 высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
-                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
               </p>
             </li>
             <li class="blog-goldfish__item">
@@ -204,23 +210,50 @@
         </div>
       </section>
       <section class="gallery">
-        <h3 class="gallery__title main__title title-decor">А можно в картинках?</h3>
+        <h3 class="gallery__title main__title title-decor">
+          А можно в картинках?
+        </h3>
         <div class="gallery__container">
           <div class="gallery__block-1">
-            <img class="gallery__image" src="./images/sunset.png" alt="Изображение пейзажа" loading="lazy">
+            <img
+              class="gallery__image"
+              src="./images/sunset.png"
+              alt="Изображение пейзажа"
+              loading="lazy"
+            />
           </div>
           <div class="gallery__block-2">
-            <img class="gallery__image" src="./images/ice-cream.png" alt="Изображение с вкусным мороженым" loading="lazy">
+            <img
+              class="gallery__image"
+              src="./images/ice-cream.png"
+              alt="Изображение с вкусным мороженым"
+              loading="lazy"
+            />
           </div>
-          <div class="gallery__block-3"> 
-            <img class="gallery__image" src="./images/tape.png" alt="Изображение с диском" loading="lazy">
-          </div> 
+          <div class="gallery__block-3">
+            <img
+              class="gallery__image"
+              src="./images/tape.png"
+              alt="Изображение с диском"
+              loading="lazy"
+            />
+          </div>
           <div class="gallery__block-4">
-            <img class="gallery__image" src="./images/books.png" alt="Изображение с книгами" loading="lazy">
+            <img
+              class="gallery__image"
+              src="./images/books.png"
+              alt="Изображение с книгами"
+              loading="lazy"
+            />
           </div>
           <div class="gallery__block-5">
-            <img class="gallery__image" src="./images/street.png" alt="Изображение улицы" loading="lazy">
-          </div>  
+            <img
+              class="gallery__image"
+              src="./images/street.png"
+              alt="Изображение улицы"
+              loading="lazy"
+            />
+          </div>
         </div>
       </section>
     </main>
