Corrections of the reviewer's comments - 1

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -53,13 +53,11 @@
     </header>
     <main>
       <section class="blog-focus main__grid">
-        <h2 class="blog-focus__title main__title">
-          Почему сосредоточиться так сложно
-        </h2>
+        <h2 class="main__title">Почему сосредоточиться так сложно</h2>
         <ul class="blog-focus__list">
           <li class="blog-focus__item">
-            <h3 class="blog-focus__subtitle title-decor">Многозадачность</h3>
-            <p class="blog-focus__text main__text">
+            <h3 class="main__subtitle title-decor">Многозадачность</h3>
+            <p class="main__text">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
@@ -77,8 +75,8 @@
             </p>
           </li>
           <li class="blog-focus__item">
-            <h3 class="blog-focus__subtitle title-decor">Дофамин</h3>
-            <p class="blog-focus__text main__text">
+            <h3 class="main__subtitle title-decor">Дофамин</h3>
+            <p class="main__text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
               противоположность стрессу — дофамин. Это вещество участвует в
@@ -92,15 +90,13 @@
         </ul>
       </section>
       <section class="blog-concentration">
-        <h2 class="blog-concentration__title main__title main__title_width">
+        <h2 class="main__title main__title_width">
           Что снижает концентрацию внимания?
         </h2>
         <ul class="blog-concentration__list">
           <li class="blog-concentration__item">
-            <h3 class="blog-concentration__subtitle title-decor">
-              Многозадачность
-            </h3>
-            <p class="blog-concentration__text main__text">
+            <h3 class="main__subtitle title-decor">Многозадачность</h3>
+            <p class="main__text">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
               наш мозг постоянно «сканировать» окружающую среду на предмет
@@ -110,8 +106,8 @@
             </p>
           </li>
           <li class="blog-concentration__item">
-            <h3 class="blog-concentration__subtitle title-decor">Еда</h3>
-            <p class="blog-concentration__text main__text">
+            <h3 class="main__subtitle title-decor">Еда</h3>
+            <p class="main__text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
               эта энергия также быстро, как и приходит. А мы в результате
@@ -121,8 +117,8 @@
             </p>
           </li>
           <li class="blog-concentration__item">
-            <h3 class="blog-concentration__subtitle title-decor">Гаджеты</h3>
-            <p class="blog-concentration__text main__text">
+            <h3 class="main__subtitle title-decor">Гаджеты</h3>
+            <p class="main__text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
               забавными утятами. В результате мозг пытается переключиться с
@@ -135,20 +131,20 @@
         </ul>
       </section>
       <section class="blog-goldfish main__grid">
-        <h2 class="blog-goldfish__title main__title main__title_width">
+        <h2 class="main__title main__title_width">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
         </h2>
         <div class="blog-goldfish__content">
-          <p class="blog-goldfish__content-text main__title title-decor">
+          <h3 class="main__title title-decor color__element_theme-dark">
             5 простых (на самом деле не очень) советов
-          </p>
+          </h3>
           <ul class="blog-goldfish__list">
             <li class="blog-goldfish__item">
-              <h3 class="blog-goldfish__subtitle title-decor">
+              <h4 class="blog-goldfish__subsections title-decor">
                 Представьте небо и облака
-              </h3>
-              <p class="blog-goldfish__text main__text">
+              </h4>
+              <p class="main__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
                 сложных задачах как раз и мешают эти сложные задачи делать. В
@@ -160,10 +156,10 @@
               </p>
             </li>
             <li class="blog-goldfish__item">
-              <h3 class="blog-goldfish__subtitle title-decor">
+              <h4 class="blog-goldfish__subsections title-decor">
                 Включите музыку
-              </h3>
-              <p class="blog-goldfish__text main__text">
+              </h4>
+              <p class="main__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
                 Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
@@ -171,8 +167,10 @@
               </p>
             </li>
             <li class="blog-goldfish__item">
-              <h3 class="blog-goldfish__subtitle title-decor">Прогуляйтесь</h3>
-              <p class="blog-goldfish__text main__text">
+              <h4 class="blog-goldfish__subsections title-decor">
+                Прогуляйтесь
+              </h4>
+              <p class="main__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
                   class="main__link"
@@ -188,8 +186,10 @@
               </p>
             </li>
             <li class="blog-goldfish__item">
-              <h3 class="blog-goldfish__subtitle title-decor">Хорошо ешьте</h3>
-              <p class="blog-goldfish__text main__text">
+              <h4 class="blog-goldfish__subsections title-decor">
+                Хорошо ешьте
+              </h4>
+              <p class="main__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
                 высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
@@ -198,8 +198,8 @@
               </p>
             </li>
             <li class="blog-goldfish__item">
-              <h3 class="blog-goldfish__subtitle title-decor">Читайте</h3>
-              <p class="blog-goldfish__text main__text">
+              <h4 class="blog-goldfish__subsections title-decor">Читайте</h4>
+              <p class="main__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
                 даже секунд. А вот интересная книга способна затянуть и на
@@ -210,51 +210,51 @@
         </div>
       </section>
       <section class="gallery">
-        <h3 class="gallery__title main__title title-decor">
+        <h2 class="main__title title-decor color__element_theme-dark">
           А можно в картинках?
-        </h3>
-        <div class="gallery__container">
-          <div class="gallery__block-1">
+        </h2>
+        <ul class="gallery__list">
+          <li class="gallery__item">
             <img
               class="gallery__image"
               src="./images/sunset.png"
               alt="Изображение пейзажа"
               loading="lazy"
             />
-          </div>
-          <div class="gallery__block-2">
+          </li>
+          <li class="gallery__item">
             <img
               class="gallery__image"
               src="./images/ice-cream.png"
               alt="Изображение с вкусным мороженым"
               loading="lazy"
             />
-          </div>
-          <div class="gallery__block-3">
+          </li>
+          <li class="gallery__item">
             <img
               class="gallery__image"
               src="./images/tape.png"
               alt="Изображение с диском"
               loading="lazy"
             />
-          </div>
-          <div class="gallery__block-4">
+          </li>
+          <li class="gallery__item">
             <img
               class="gallery__image"
               src="./images/books.png"
               alt="Изображение с книгами"
               loading="lazy"
             />
-          </div>
-          <div class="gallery__block-5">
+          </li>
+          <li class="gallery__item">
             <img
               class="gallery__image"
               src="./images/street.png"
               alt="Изображение улицы"
               loading="lazy"
             />
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="footer decorated-zone">
